Disable NuGet sec analysis error. (#1422)
* Disable NuGet sec analysis error.

--- a/eng/pipelines/pipeline-generation-single.yml
+++ b/eng/pipelines/pipeline-generation-single.yml
@@ -13,6 +13,7 @@ pr: none
 trigger: none
 
 variables:
+  NugetSecurityAnalysisWarningLevel: none
   skipComponentGovernanceDetection: true
   DevOpsOrg: https://dev.azure.com/azure-sdk
   PathFilter: $(Pipeline.Workspace)/$(RepositoryName)/sdk/$(ServiceDirectory)
