--- a/eng/pipelines/pipeline-generation.yml
+++ b/eng/pipelines/pipeline-generation.yml
@@ -3,6 +3,7 @@ pr: none
 trigger: none
 
 variables:
+  NugetSecurityAnalysisWarningLevel: none
   skipComponentGovernanceDetection: true
   TestOptions: ''
 
