Disable the feed analysis (#1511)

--- a/.azure-pipelines/dotnet.yml
+++ b/.azure-pipelines/dotnet.yml
@@ -32,6 +32,7 @@ resources:
 
 variables:
   DotNetCoreVersion: '3.0.100'
+  NugetSecurityAnalysisWarningLevel: 'none'
 
 stages:
   - stage: 'Build_and_Test'
