--- a/eng/pipelines/templates/steps/sync-repo-branch.yml
+++ b/eng/pipelines/templates/steps/sync-repo-branch.yml
@@ -25,7 +25,6 @@ steps:
       Set-PsDebug -Trace 1
       $SourceRepo = '${{ repo.key }}'
       $SourceBranch = '${{ repo.value.Branch }}'
-
       if (-not (Test-Path ${{ repo.key }})) {
         New-Item -Path ${{ repo.key }} -ItemType Directory -Force
         Set-Location $SourceRepo
@@ -35,6 +34,13 @@ steps:
         Set-Location $SourceRepo
       }
 
+      # Check the default branch
+      if (!$SourceBranch) {
+        $defaultBranch = (git remote show Source | Out-String) -replace "(?ms).*HEAD branch: (\w+).*", '$1'
+        Write-Host "No source branch. Fetch default branch $defaultBranch."
+        $SourceBranch = $defaultBranch
+      }
+      
       git fetch --no-tags Source $SourceBranch
       if ($LASTEXITCODE -ne 0) {
         Write-Host "#`#vso[task.logissue type=error]Failed to fetch ${SourceRepo}:${SourceBranch}"
@@ -66,6 +72,13 @@ steps:
         try {
           git remote add Target "https://${{ parameters.GH_TOKEN }}@github.com/${TargetRepo}.git"
 
+          $defaultBranch = (git remote show Target | Out-String) -replace "(?ms).*HEAD branch: (\w+).*", '$1'
+          if (!$SourceBranch) {
+            $SourceBranch = $defaultBranch
+          }
+          if (!$TargetBranch) {
+            $TargetBranch = $defaultBranch
+          }
           if (-not '${{ target.value.Rebase }}') {
             git checkout -B target_branch source_branch
             git push Target "target_branch:refs/heads/${TargetBranch}"
