--- a/tools/pipeline-witness/ci.yml
+++ b/tools/pipeline-witness/ci.yml
@@ -3,6 +3,7 @@ trigger:
   branches:
     include:
       - master
+      - main
       - feature/*
       - release/*
       - hotfix/*
@@ -14,6 +15,7 @@ pr:
   branches:
     include:
       - master
+      - main
       - feature/*
       - release/*
       - hotfix/*
