--- a/eng/pipelines/githubio-linkcheck.yml
+++ b/eng/pipelines/githubio-linkcheck.yml
@@ -4,6 +4,9 @@ pr: none
 pool:
   vmImage: 'ubuntu-18.04'
 
+variables:
+  cachefile: verify-links-cache.txt
+
 steps:
 - task: PowerShell@2
   displayName: 'azure-sdk link check'
@@ -13,6 +16,20 @@ steps:
     arguments: >
       -urls "https://azure.github.io/azure-sdk/index.html"
       -ignoreLinksFile "./eng/pipelines/githubio-linkcheck-ignore-links.txt"
+      -inputCacheFile "$(cachefile)"
+      -outputCacheFile "$(cachefile)"
+      -devOpsLogging: $true
+
+- task: PowerShell@2
+  displayName: 'azure-sdk link check with caching'
+  inputs:
+    pwsh: true
+    filePath: eng/common/scripts/Verify-Links.ps1
+    arguments: >
+      -urls "https://azure.github.io/azure-sdk/index.html"
+      -ignoreLinksFile "./eng/pipelines/githubio-linkcheck-ignore-links.txt"
+      -inputCacheFile "$(cachefile)"
+      -outputCacheFile "$(cachefile)"
       -devOpsLogging: $true
 
 - task: PowerShell@2
@@ -23,6 +40,8 @@ steps:
     arguments: >
       -urls "https://azure.github.io/azure-sdk-for-java/index.html"
       -ignoreLinksFile "./eng/pipelines/githubio-linkcheck-ignore-links.txt"
+      -inputCacheFile "$(cachefile)"
+      -outputCacheFile "$(cachefile)"
       -devOpsLogging: $true
 
 - task: PowerShell@2
@@ -33,6 +52,8 @@ steps:
     arguments: >
       -urls "https://azure.github.io/azure-sdk-for-js/index.html"
       -ignoreLinksFile "./eng/pipelines/githubio-linkcheck-ignore-links.txt"
+      -inputCacheFile "$(cachefile)"
+      -outputCacheFile "$(cachefile)"
       -devOpsLogging: $true
 
 - task: PowerShell@2
@@ -43,6 +64,8 @@ steps:
     arguments: >
       -urls "https://azure.github.io/azure-sdk-for-net/index.html"
       -ignoreLinksFile "./eng/pipelines/githubio-linkcheck-ignore-links.txt"
+      -inputCacheFile "$(cachefile)"
+      -outputCacheFile "$(cachefile)"
       -devOpsLogging: $true
 
 - task: PowerShell@2
@@ -53,4 +76,16 @@ steps:
     arguments: >
       -urls "https://azure.github.io/azure-sdk-for-python/index.html"
       -ignoreLinksFile "./eng/pipelines/githubio-linkcheck-ignore-links.txt"
+      -inputCacheFile "$(cachefile)"
+      -outputCacheFile "$(cachefile)"
       -devOpsLogging: $true
+
+- publish: $(cachefile)
+  artifact: verify-links-cache.txt
+  condition: succeededOrFailed()
+  displayName: Upload verified links
+
+- pwsh: |
+    azcopy copy '$(cachefile)' 'https://azuresdkartifacts.blob.core.windows.net/verify-links-cache$(azuresdkartifacts-verify-links-cache-sas)'
+  condition: succeededOrFailed()
+  displayName: Upload cache file to blob container
