--- a/eng/pipelines/githubio-linkcheck.yml
+++ b/eng/pipelines/githubio-linkcheck.yml
@@ -12,6 +12,7 @@ variables:
 steps:
 - task: PowerShell@2
   displayName: 'azure-sdk link check'
+  condition: succeededOrFailed()
   inputs:
     pwsh: true
     filePath: eng/common/scripts/Verify-Links.ps1
@@ -24,6 +25,7 @@ steps:
 
 - task: PowerShell@2
   displayName: 'azure-sdk link check with caching'
+  condition: succeededOrFailed()
   inputs:
     pwsh: true
     filePath: eng/common/scripts/Verify-Links.ps1
@@ -36,6 +38,7 @@ steps:
 
 - task: PowerShell@2
   displayName: 'java link check'
+  condition: succeededOrFailed()
   inputs:
     pwsh: true
     filePath: eng/common/scripts/Verify-Links.ps1
@@ -48,6 +51,7 @@ steps:
 
 - task: PowerShell@2
   displayName: 'js link check'
+  condition: succeededOrFailed()
   inputs:
     pwsh: true
     filePath: eng/common/scripts/Verify-Links.ps1
@@ -60,6 +64,7 @@ steps:
 
 - task: PowerShell@2
   displayName: 'net link check'
+  condition: succeededOrFailed()
   inputs:
     pwsh: true
     filePath: eng/common/scripts/Verify-Links.ps1
@@ -72,6 +77,7 @@ steps:
 
 - task: PowerShell@2
   displayName: 'python link check'
+  condition: succeededOrFailed()
   inputs:
     pwsh: true
     filePath: eng/common/scripts/Verify-Links.ps1
@@ -84,6 +90,7 @@ steps:
 
 - task: PowerShell@2
   displayName: 'go link check'
+  condition: succeededOrFailed()
   inputs:
     pwsh: true
     filePath: eng/common/scripts/Verify-Links.ps1
