--- a/eng/pipelines/pipeline-generation.yml
+++ b/eng/pipelines/pipeline-generation.yml
@@ -12,6 +12,8 @@ parameters:
     default: 1
   - name: AzureSDK_Nuget_Release_Pipeline_Secrets
     default: 13
+  - name: AzureSDK_CocoaPods_Release_Pipeline_Secrets
+    default: 98
   - name: NPM_Registry_Authentication
     default: 24
   - name: Secrets_for_DevOps_Notification_Configuration_and_User_Resolution
@@ -106,6 +108,7 @@ jobs:
           --variablegroup ${{ parameters.Secrets_for_DevOps_Notification_Configuration_and_User_Resolution }}
           --variablegroup ${{ parameters.APIReview_AutoCreate_Configurations }}
           --variablegroup ${{ parameters.Secrets_for_Resource_Provisioner }}
+          --variablegroup ${{ parameters.AzureSDK_CocoaPods_Release_Pipeline_Secrets}}
   steps:
   - template: /eng/common/pipelines/templates/steps/install-pipeline-generation.yml
   - script: |
