Disable NuGet warning for tutorial setup. (#1644)

--- a/eng/pipelines/setup-tutorial-branch.yml
+++ b/eng/pipelines/setup-tutorial-branch.yml
@@ -39,7 +39,8 @@ parameters:
 
 variables:
   skipComponentGovernanceDetection: true
-
+  NugetSecurityAnalysisWarningLevel: none
+  
 jobs:
 - job: SetupTutorialBranch
   pool:
