Fix notification checks (#1707)
* Fix notification checks

- Ensures that the team name as well as pipeline id match
- If the name and id don't match then update one or the other so
  that we can keep updated with pipeline updates (i.e. renames or deletes)
- Ensure the pipeline in the notification settings matches the current pipeline name.

* Fix build warning/errors

--- a/eng/pipelines/notifications.yml
+++ b/eng/pipelines/notifications.yml
@@ -37,7 +37,7 @@ stages:
 
     steps:
 
-      - task: DotNetCoreInstaller@0
+      - task: UseDotNet@2
         displayName: 'Use .NET Core sdk $(DotNetCoreVersion)'
         inputs:
           version: '$(DotNetCoreVersion)'
